# xll

./: .clang-format  .clang-tidy  CMakelists.txt  act_env.bat  build.bat  xll.props
example/: CMakeLists.txt  handle.cpp  test.cpp  test2.cpp
xll/: CMakeLists.txt  addin.h  args.h  auto.cpp  error.cpp  excel.h  exports.h  fp.h  handle.h  on.h  oper.h  register.h  sref.h  traits.h  type_traits.h  utf8.h  xll.h  xll_codec.h  xllio.h  xloper.h
xll/macro/: xll_addin.cpp  xll_addin_manager.h  xll_document.cpp  xll_function.cpp  xll_install.cpp  xll_macro.cpp  xll_macro.h  xll_paste.cpp  xll_paste.h  xll_spreadsheet.cpp  xll_trace.cpp  xll_utility.cpp
